--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     { "source": "/admin", "destination": "/" },
-    { "source": "/admin/**", "destination": "/" },
+    { "source": "/admin/:path*", "destination": "/" },
     { "source": "/test-tasa", "destination": "/" }
   ]
 }
