--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,7 +12,13 @@
     "skipLibCheck": true,
     "jsx": "react-jsx",
     "allowJs": false,
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+
+    // ✅ Agregado para alias "@"
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": ["src", "vite-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["dist", "node_modules"]
