--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "description": "🤖 Bot inteligente para WhatsApp con AI, OCR, memoria persistente y pagos automatizados.",
   "main": "dist/main.js",
   "scripts": {
-    "dev": "NODE_OPTIONS='--loader ts-node/esm' dotenv -e .env -- ts-node --esm --transpile-only main.ts",
+    "dev": "NODE_OPTIONS='--loader ts-node/esm' dotenv -e .env -- ts-node --esm --transpile-only src/main.ts",
     "start:local": "NODE_ENV=development pnpm dev",
-    "build": "tsup main.ts --format esm --out-dir dist --target node20 --clean",
+    "build": "tsup src/main.ts --format esm --out-dir dist --target node20 --clean",
     "build:prod": "pnpm build",
     "heroku-build": "pnpm build",
     "start": "NODE_ENV=production node --enable-source-maps dist/main.js",
@@ -26,7 +26,7 @@
     "inteligencia-artificial",
     "nodejs"
   ],
-  "author": "Mundoianime",
+  "author": "MundoIAanime",
   "license": "MIT",
   "engines": {
     "node": ">=20.11.1",
@@ -42,7 +42,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "diacritics": "^1.3.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
@@ -53,15 +53,15 @@
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.6.1",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.15.1",
-    "openai": "^5.0.2",
+    "mongoose": "^8.16.1",
+    "openai": "^5.8.1",
     "pdfkit": "^0.17.1",
     "pino": "^9.7.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "tesseract.js": "^6.0.1",
     "uuid": "^11.1.0",
-    "validator": "^13.11.0"
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -73,13 +73,13 @@
     "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/luxon": "^3.6.2",
-    "@types/node": "^22.15.32",
+    "@types/node": "^22.15.33",
     "@types/pdfkit": "^0.14.0",
     "@types/qrcode": "^1.5.5",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.34.1",
+    "@typescript-eslint/parser": "^8.35.0",
     "concurrently": "^7.6.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.29.0",
